# CPP_lang_lab_2

./: .gitignore  CMakeLists.txt  README.md  image_main.cpp  knn_main.cpp  main.cpp
inc/: gaussian.h  knn_searcher.h
plot/: knn.py  main.py
src/: gaussian.cpp  image_convolver.cpp  knn_searcher.cpp
